Closed Bug 1289375 Opened 9 years ago Closed 9 years ago

Rollback the change of preloading cursors for IndexedDB

Categories

(Core :: Storage: IndexedDB, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: bevis, Assigned: bevis)

References

Details

Attachments

(1 file)

Patch#4 and Patch#5 of bug 1168606 seems incomplete and are dead codes. Furthermore, they seems not validated before landing. :-( In Patch#5, The extra ExecuteStep [1] is useless because the number of queried results are already LIMITed in [2] and we met further assertion failure in PopulateResponseFromStatement() if we set countString in [1] as advanceCount + extraCount. That means changes in ActorsChild.cpp has never been executed. In addition, changes in patch#4 is also useless because the additional key parameter has never been used. To prevent further confusion while implementing bug 1271505. I'd like to roll back these 2 patches and reopen bug 1168606 to follow up. [1] https://hg.mozilla.org/mozilla-central/file/tip/dom/indexedDB/ActorsParent.cpp#l27848 [2] https://hg.mozilla.org/mozilla-central/file/tip/dom/indexedDB/ActorsParent.cpp#l27766
Priority: -- → P1
Comment on attachment 8774696 [details] [diff] [review] (v1) Patch: Rollback incomplete change of preloading cursors for IndexedDB. Review of attachment 8774696 [details] [diff] [review]: ----------------------------------------------------------------- Treeherder result for reference: https://treeherder.mozilla.org/#/jobs?repo=try&revision=d04948efc499
Attachment #8774696 - Flags: review?(khuey)
Pushed by cbook@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/eda36a4f9303 Rollback incomplete change of preloading cursors for IndexedDB. r=khuey
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: