Bug 1289375 - Rollback incomplete change of preloading cursors for IndexedDB. r=khuey